# videoduplicatefinder-next

./: CLAUDE.md  DATABASESTRUCTURE.md  PLAN.md  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: docker.yml  rust-ci.yml
VDF.CLI/Commands/: SharedOptions.cs
VDF.Core/: DuplicateFlags.cs  FileEntry.cs  ScanEngine.cs  Settings.cs
VDF.Core/Assets/Locales/: en.json
VDF.Core/FFTools/: FFProbeEngine.cs  FfmpegEngine.cs  IFrameExtractor.cs  Mpeg7SignatureEngine.cs
VDF.Core/Utils/: DatabaseUtils.cs  Logger.cs  TemporalHashUtils.cs
VDF.Web/: Dockerfile  Program.cs
VDF.Web/Components/: _Imports.razor
VDF.Web/Components/Layout/: MainLayout.razor
VDF.Web/Components/Pages/: Log.razor  Results.razor  Settings.razor
VDF.Web/Services/: LogService.cs  ScanService.cs
VDF.Web/Utils/: MimeTypeHelper.cs
VDF.Web/wwwroot/: app.css  app.js
mediaorganizer/: Cargo.toml  Dockerfile  docker-compose.yml
mediaorganizer/.cargo/: config.toml
mediaorganizer/cli/: Cargo.toml
mediaorganizer/cli/src/: main.rs
mediaorganizer/core/: Cargo.toml
mediaorganizer/core/src/: audio.rs  blacklist.rs  comparison.rs  config.rs  db.rs  ffmpeg.rs  hardlink.rs  lib.rs  mpeg7.rs  phash.rs  ranker.rs  scan.rs  thumbnail.rs  utils.rs
mediaorganizer/core/tests/: chromaprint_regression.rs  comparison_integration.rs  comparison_properties.rs  mpeg7_regression.rs  phash_regression.rs  scene_detection_regression.rs  ssim_regression.rs
mediaorganizer/ui/: Cargo.toml
mediaorganizer/ui/src/: app.rs  main.rs  notify.rs  settings.rs  shell.rs
mediaorganizer/ui/src/server/: api.rs  auth.rs  ffmpeg_setup.rs  mod.rs
mediaorganizer/ui/src/state/: app_state.rs  scan_state.rs
mediaorganizer/ui/src/views/: blacklist.rs  compare.rs  database.rs  logs.rs  mod.rs  relocate.rs  results.rs  scan.rs  settings.rs  stats.rs
vdf-rs/: Cargo.toml
vdf-rs/vdf_cli/: Cargo.toml
vdf-rs/vdf_cli/src/: main.rs
vdf-rs/vdf_core/: Cargo.toml
vdf-rs/vdf_core/src/: db.rs  error.rs  lib.rs  phash.rs  scan.rs
vdf-rs/vdf_ui/: Cargo.toml
vdf-rs/vdf_ui/src/: main.rs
vdf-rs/vdf_ui/src/server/: api.rs  mod.rs
vdf-rs/vdf_ui/src/state/: app_state.rs  mod.rs  scan_state.rs
vdf-rs/vdf_ui/src/views/: compare.rs  mod.rs  results.rs  scan.rs  settings.rs
