[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mediaorganizer"
path = "src/main.rs"

[dependencies]
# Import our "core" library as "app_core" to avoid shadowing Rust's
# built-in `core` crate, which clap's proc-macro needs to compile.
# The directory stays "core/" and the package is still named "core".
app_core = { path = "../core", package = "core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
camino = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
