[package]
name = "vdf_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vdf-cli"
path = "src/main.rs"

[dependencies]
vdf_core = { path = "../vdf_core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
camino = { workspace = true }
rayon = { workspace = true }
