[package]
name = "vdf_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fast_image_resize = { workspace = true }
realfft = { workspace = true }
ignore = { workspace = true }
camino = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
ffmpeg-the-third = { workspace = true }
ffmpeg-sys-the-third = { workspace = true }
surrealdb = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
