[package]
name = "vdf_ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vdf-ui"
path = "src/main.rs"

# Feature flags select the compile target.
# Only one should be active per build.
#
#   cargo build --features desktop   →  native GPU app (Wayland / Win / Mac)
#   cargo build --features web       →  WASM bundle + embedded Axum server
#   cargo build --features mobile    →  iOS / Android binary
#
# cargo check with no features still type-checks all component code.
[features]
default = []
desktop = ["dioxus/desktop"]
web     = ["dioxus/web", "dep:axum", "tokio/full"]
mobile  = ["dioxus/mobile"]

[dependencies]
vdf_core = { path = "../vdf_core" }

dioxus   = { version = "0.7", default-features = false, features = ["router"] }
anyhow   = { workspace = true }
tracing  = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
tokio    = { workspace = true }
camino   = { workspace = true }

# Only linked for the `web` target
axum = { version = "0.8", optional = true }
